--- a/CS60DN46/Ch26IntroduceWPF/WpfTesterApp/MainWindow.xaml
+++ b/CS60DN46/Ch26IntroduceWPF/WpfTesterApp/MainWindow.xaml
@@ -5,20 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfTesterApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="360" Width="480" BorderBrush="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}">
+        Title="MainWindow" Height="320" Width="480" BorderBrush="{DynamicResource {x:Static SystemColors.GradientActiveCaptionBrushKey}}" MouseMove="Window_MouseMove">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="17*"/>
             <ColumnDefinition Width="101*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="53,52,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Click">
+        <Button Content="Button" HorizontalAlignment="Left" Margin="53,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2" Click="Button_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF80EB4F" Offset="0"/>
                     <GradientStop Color="#FFCE3058" Offset="1"/>
+                    <GradientStop Color="#FF8293DD" Offset="0.5"/>
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Calendar HorizontalAlignment="Left" Margin="53,120,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Calendar HorizontalAlignment="Left" Margin="53,78,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
