--- a/CS60DN46/Ch27WPFControls/MyWordPad/MainWindow.xaml
+++ b/CS60DN46/Ch27WPFControls/MyWordPad/MainWindow.xaml
@@ -5,8 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyWordPad"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="500">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="350" Width="525">
+    <DockPanel>
+        <!-- Dock menu system on the top -->
+        <Menu DockPanel.Dock ="Top" HorizontalAlignment="Left" Background="White" BorderBrush="Black">
+            <MenuItem Header="_File">
+                <Separator/>
+                <MenuItem Header ="_Exit" MouseEnter ="MouseEnterExitArea" MouseLeave="MouseLeaveArea" Click ="FileExit_Click" />
+            </MenuItem>
+            <MenuItem Header="_Tools">
+                <MenuItem Header ="_Spelling Hints" MouseEnter="MouseEnterToolsHintsArea" MouseLeave ="MouseLeaveArea" Click="ToolsSpellingHints_Click" />
+            </MenuItem>
+        </Menu>
+
+        <!-- Put Toolbar under the Menu -->
+        <ToolBar DockPanel.Dock ="Top" >
+            <Button Content ="Exit" MouseEnter ="MouseEnterExitArea" MouseLeave ="MouseLeaveArea" Click ="FileExit_Click"/>
+            <Separator/>
+            <Button Content ="Check" MouseEnter ="MouseEnterToolsHintsArea" MouseLeave ="MouseLeaveArea" Click="ToolsSpellingHints_Click" Cursor="Help" />
+        </ToolBar>
+    </DockPanel>
 </Window>
