--- a/CS60DN46/Ch27WPFControls/WpfControlsAndAPIs/MainWindow.xaml
+++ b/CS60DN46/Ch27WPFControls/WpfControlsAndAPIs/MainWindow.xaml
@@ -15,10 +15,22 @@
                         <RadioButton x:Name="selectRadio" Content="Erase Mode!" Height="50" Width="100"/>
                         <RadioButton x:Name="eraseRadio" Content="Select Mode!" Height="50" Width="100"/>
                         <Separator/>
-                        <ComboBox x:Name="comboColors" Width="100">
-                            <ComboBoxItem Content="Red"/>
-                            <ComboBoxItem Content="Green"/>
-                            <ComboBoxItem Content="Blue"/>
+                        <ComboBox x:Name="comboColors" Width="100"  SelectionChanged="ColorChanged">
+                            <StackPanel Orientation ="Horizontal" Tag="Red">
+                                <Ellipse Fill ="Red" Height ="50" Width ="50"/>
+                                <Label FontSize ="20" HorizontalAlignment="Center"
+VerticalAlignment="Center" Content="Red"/>
+                            </StackPanel>
+                            <StackPanel Orientation ="Horizontal" Tag="Green">
+                                <Ellipse Fill ="Green" Height ="50" Width ="50"/>
+                                <Label FontSize ="20" HorizontalAlignment="Center"
+VerticalAlignment="Center" Content="Green"/>
+                            </StackPanel>
+                            <StackPanel Orientation ="Horizontal" Tag="Blue">
+                                <Ellipse Fill ="Blue" Height ="50" Width ="50"/>
+                                <Label FontSize ="20" HorizontalAlignment="Center"
+VerticalAlignment="Center" Content="Blue"/>
+                            </StackPanel>
                         </ComboBox>
                     </ToolBar>
                 </StackPanel>
