--- a/CS60DN46/Ch28Graphics/RenderingWithShapes/MainWindow.xaml
+++ b/CS60DN46/Ch28Graphics/RenderingWithShapes/MainWindow.xaml
@@ -7,6 +7,21 @@
         mc:Ignorable="d"
         Title="Fun with Shapes!" Height="300" Width="300">
     <Grid>
-        <Rectangle x:Name="myRect" Height="30" Width="30" Fill="Green" MouseDown="myRect_MouseDown"/>
+        <DockPanel LastChildFill="True">
+            <ToolBar DockPanel.Dock="Top" Name="mainToolBar" Height="50">
+                <RadioButton Name="circleOption" GroupName="shapeSelection">
+                    <Ellipse Fill="Green" Height="35" Width="35" />
+                </RadioButton>
+                <RadioButton Name="rectOption" GroupName="shapeSelection">
+                    <Rectangle Fill="Red" Height="35" Width="35" RadiusY="10" RadiusX="10" />
+                </RadioButton>
+                <RadioButton Name="lineOption" GroupName="shapeSelection">
+                    <Line Height="35" Width="35" StrokeThickness="10" Stroke="Blue"
+X1="10" Y1="10" Y2="25" X2="25" StrokeStartLineCap="Triangle" StrokeEndLineCap="Round" />
+                </RadioButton>
+            </ToolBar>
+            <Canvas Background="LightBlue" Name="canvasDrawingArea"/>
+            <Rectangle x:Name="myRect" Height="30" Width="30" Fill="Green" MouseDown="myRect_MouseDown"/>
+        </DockPanel>
     </Grid>
 </Window>
