--- a/CS60DN46/Ch32WebControls/AspNetCarsSite/MasterPage.master
+++ b/CS60DN46/Ch32WebControls/AspNetCarsSite/MasterPage.master
@@ -16,9 +16,10 @@
         <asp:AdRotator ID="myAdRotator" runat="server" />
         &nbsp;<br />
         <br />
-        <asp:TreeView ID="navigationTree" runat="server">
+        <asp:TreeView ID="navigationTree" runat="server" DataSourceID="SiteMapDataSource1">
 
         </asp:TreeView>
+        <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
         <hr />
     </div>
     <div>
