--- a/CS60DN46/Ch32WebControls/AspNetCarsSite/MasterPage.master
+++ b/CS60DN46/Ch32WebControls/AspNetCarsSite/MasterPage.master
@@ -19,6 +19,8 @@
         <asp:TreeView ID="navigationTree" runat="server" DataSourceID="SiteMapDataSource1">
 
         </asp:TreeView>
+        <asp:SiteMapPath ID="SiteMapPath1" runat="server">
+        </asp:SiteMapPath>
         <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
         <hr />
     </div>
