change namespace name

--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.ExternalLoginConfirmationViewModel
+﻿@model CarLotMVC.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
