--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ForgotPassword.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.ForgotPasswordViewModel
+﻿@model CarLotMVC.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
