--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ResetPassword.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.ResetPasswordViewModel
+﻿@model CarLotMVC.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
