--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/AddPhoneNumber.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.AddPhoneNumberViewModel
+﻿@model CarLotMVC.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
