--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/ChangePassword.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.ChangePasswordViewModel
+﻿@model CarLotMVC.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
