--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/ManageLogins.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.ManageLoginsViewModel
+﻿@model CarLotMVC.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
