--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/SetPassword.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.SetPasswordViewModel
+﻿@model CarLotMVC.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
