--- a/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC2/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarLotMVC2.Models.VerifyPhoneNumberViewModel
+﻿@model CarLotMVC.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
