--- a/CS60DN46/Ch34MVC/CarLotMVC/Views/Shared/_Layout.cshtml
+++ b/CS60DN46/Ch34MVC/CarLotMVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Inventory", "Index", "Inventory")</li>
+                    <li>@Html.ActionLink("Inventory", "Index", "Inventoryommi")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
