--- a/MVC/FirstMVC/Views/Shared/_Layout.cshtml
+++ b/MVC/FirstMVC/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("First MVC", "Index", "Movies", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("First MVC", "Index", "HelloWorld", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
