--- a/MVC/FirstMVC/Views/HelloWorld/Index.cshtml
+++ b/MVC/FirstMVC/Views/HelloWorld/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@*@{
+﻿@{
         Layout = "~/Views/Shared/_Layout.cshtml";
-    }*@
-
-@{
-    ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+@{
+    ViewBag.Title = "First MVC Index";
+}
+
+<h2>First Index</h2>
 <p>Hello from out View Template!</p>
